@@ -41,6 +41,14 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.1</version>
+        <configuration>
+          <argLine>-Djdk.attach.allowAttachSelf</argLine>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <repositories>
@@ -54,7 +62,7 @@
     <dependency>
       <groupId>org.apache.tomee</groupId>
       <artifactId>javaee-api</artifactId>
-      <version>8.0</version>
+      <version>[8.0,)</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -77,7 +85,7 @@
     <dependency>
       <groupId>com.sun.xml.parsers</groupId>
       <artifactId>jaxp-ri</artifactId>
-      <version>1.4.2</version>
+      <version>1.4.5</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
